--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lenis": "^1.3.1",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-intl": "^4.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0"
