--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.7",
     "lenis": "^1.3.1",
     "lucide-react": "^0.503.0",
+    "mouse-follower": "^1.1.2",
     "next": "15.3.1",
     "next-intl": "^4.0.3",
     "react": "^19.0.0",
