--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mouse-follower": "^1.1.2",
     "next": "15.3.1",
     "next-intl": "^4.0.3",
+    "next-video": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
