--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.12.7",
     "lenis": "^1.3.1",
     "lucide-react": "^0.503.0",
+    "motion": "^12.15.0",
     "mouse-follower": "^1.1.2",
     "next": "15.3.1",
     "next-intl": "^4.0.3",
