--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.2.0",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.25.28"
