--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.79.0",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +31,7 @@
     "country-state-city": "^3.2.1",
     "cross-env": "^7.0.3",
     "gsap": "^3.12.7",
+    "i18next": "^25.4.0",
     "lenis": "^1.3.1",
     "lucide-react": "^0.503.0",
     "motion": "^12.15.0",
@@ -38,12 +41,13 @@
     "next-video": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.4",
+    "react-hook-form": "^7.62.0",
     "sst": "^3.17.6",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.2.0",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.25.28"
+    "zod": "^3.25.76",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
