--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-select": "^2.2.2",
@@ -37,6 +39,7 @@
     "motion": "^12.15.0",
     "mouse-follower": "^1.1.2",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.29",
     "next-intl": "^4.0.3",
     "next-video": "^2.2.0",
     "react": "^19.0.0",
