--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cross-env": "^7.0.3",
     "gsap": "^3.12.7",
     "i18next": "^25.4.0",
+    "input-otp": "^1.4.2",
     "lenis": "^1.3.1",
     "lucide-react": "^0.503.0",
     "motion": "^12.15.0",
